# Destination

./: DOGFOODING_FRAMEWORK.md  ML-E2E.md  ML-testing.md  Makefile  P11-test.md  P12-P17-compression-roadmap.md  P12-RECORD.md  P12-direction.md  P12-next.md  P12-test.md  compression-roadmap.md  dogfooding.md  game-engine.md  p13-dogfood.md  plan-4-revised(10).md  plan-5-revised.md  plan-6-revised.md  plan-6.md  plan-7-controller-audit.md  plan-7-revised.md  plan-7.md  readme-revised.md  readme.md  self-play.md  the-witness.md  thin-lab.md
Do-not-reference/: ML-E2E.md  P11-test.md  P12-direction.md  (+9 more)
calendar-pilot-frontend/: Makefile  pyproject.toml
calendar-pilot-frontend/contracts/: calendar_action_receipt.schema.json  candidate_calendar_action.schema.json  codex_tool_call.schema.json  codex_tool_receipt.schema.json
calendar-pilot-frontend/docs/: AGENT_LOOP_REVISION.md  API.md  FRONTEND_AND_AUTHORITY_REVISION.md  IMPLEMENTATION_MAP.md  ML_ACTING_SELF_PLAY_LOOP.md  SELF_PLAY.md
calendar-pilot-frontend/frontend/: README.md
calendar-pilot-frontend/frontend/static/: app.js  index.html  styles.css
calendar-pilot-frontend/scripts/: browser_e2e.spec.mjs  build_macos_app.sh  run_browser_e2e.py  train_offline_policy.py
calendar-pilot-frontend/src/calendar_pilot/: app.py  replay.py  types.py
calendar-pilot-frontend/src/calendar_pilot/codex/: agent.py  planner.py  tools.py
calendar-pilot-frontend/tests/: test_behavioral_controls.py  test_codex_tools.py  test_contract_parity.py  test_dogfood_p0.py  test_dogfood_p2.py  test_kernel_stub.py  test_safety_contract_pass.py
(+1393 files in other folders)
