[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-pilot"
version = "0.1.0"
description = "Agentic calendar optimizer: Codex + DiffusionGemma + Swift kernel reference implementation"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
